# former-solver

./: .gitignore  CMakeLists.txt  Game.cpp  README.md  input.example.txt  main.cpp
include/: FileParser.h  Game.h  MCTS.h
src/: Game.cpp  main.cpp
src/solve/: MCTS.cpp
src/util/: FileParser.cpp
